Incluindo depencia do RestAssured e adciona testes de criação de usuário com sucesso

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,6 @@ repositories {
 }
 
 dependencies {
-   
-    testImplementation 'junit:junit:4.13.2'
-    implementation 'com.google.guava:guava:30.1.1-jre'
+    testImplementation 'junit:junit:4.+'
+    testImplementation 'io.rest-assured:rest-assured:4.4.0'
 }
